--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
     <title>Costos</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
         <label for="grs-harina">Cantidad de Harina</label>
         <input type="text" id="grs-harina" placeholder="Cantidad en grs...">
         <button class="btn" id="btn-harina">Calcular</button>
-        <p class="parrafo-costo">Costo: <span id="costo-harina">0</span></p>
+        <p class="parrafo-costo">Costo: <span id="costo-harina">0</span> BS</p>
     </div>
 </body>
 </html>
