--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
         <button class="btn">Calcular Costo</button>
         <p>Costo: <span class="resultado">0</span> BS</p>
       </div>
+      <div class="leche">
+        <h2>Leche</h2>
+        <label for="leche-precio">Precio por kg</label>
+        <input type="text" id="leche-precio" class="precio" placeholder="Precio por kg...">
+        <label for="leche-cantidad">Cantidad en grms</label>
+        <input type="text" id="leche-cantidad" class="cantidad" placeholder="Cantidad en grms...">
+        <button class="btn">Calcular Costo</button>
+        <p>Costo: <span class="resultado">0</span> BS</p>
+      </div>
+      <div class="huevo">
+        <h2>Huevo</h2>
+        <label for="huevo-precio">Precio por 1/2 carton</label>
+        <input type="text" id="huevo-precio" class="precio" placeholder="Precio...">
+        <label for="huevo-cantidad">Unidades</label>
+        <input type="text" id="huevo-cantidad" class="cantidad" placeholder="Cantidad...">
+        <button class="btn">Calcular Costo</button>
+        <p>Costo: <span class="resultado">0</span> BS</p>
+      </div>
+      
+      
 
       <!-- Total Acumulado -->
        <h3>Costo total <span id="total-acumulado">0</span> BS</h3>
